# rig-systems-engineering-studio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-viz.yml  generate-lattice.yml
cards-design/: a1-python-only-deep-spec.md  a2-hybrid-deep-spec.md  a3-agent-bounded-deep-spec.md  a4-llm-agent-free-deep-spec.md  bms-confidence-3-element.md  triple-diamond-21-steps.md
docs/: build-inventory.md  full-system-diagram.md  phase9.md  viz-design.md
lattice/: __init__.py  altitude_semantics.py  build_card.py  confidence_elements.py  generator.py  question_bank.py  render.py  score.py  step_semantics.py
lattice/integrations/: dv_engines.py  predictions.py
tests/: conftest.py
tests/unit/: test_generator.py
viz/: streamlit_plotly_app.py
viz/lattice_r3f/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
viz/lattice_r3f/src/: App.tsx
viz/lattice_r3f/src/components/: Axes.tsx  CellPanel.tsx  EventTicker.tsx  Lattice.tsx  Legend.tsx  MemoryHoverPanel.tsx  RGIStatusTile.tsx  Sidebar.tsx  V3PipelineMini.tsx
viz/lattice_r3f/src/lib/: positions.ts
viz/lattice_r3f/src/store/: events.ts  filters.ts  memory.ts
viz/lattice_r3f/src/types/: lattice.ts
