[project]
name = "rig-systems-engineering-studio"
version = "0.1.0"
description = "RIG Systems Engineering Studio — 7×21×21 = 3,087-cell lattice for the RIG architecture, AI Systems, and Agentic Operating System."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Mike Rodgers", email = "mike@rodgersintelligence.com" },
]
keywords = ["rig", "agentic-os", "lattice", "build-card", "systems-engineering"]

dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
viz = [
    "streamlit>=1.31",
    "plotly>=5.19",
    "pandas>=2.2",
]
yaml = [
    "PyYAML>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/rodgersintelligence/rig-systems-engineering-studio"
Repository = "https://github.com/rodgersintelligence/rig-systems-engineering-studio"
Documentation = "https://rodgersintelligence.github.io/rig-systems-engineering-studio/"

[project.scripts]
rig-lattice = "lattice.generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattice"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
